<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".activitys.Login">

    <EditText
        android:id="@+id/telaLoginEditTextLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/telaLoginEditTextLogin"
        android:inputType="textPersonName"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/telaLoginEditTextSenha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/telaLoginEditTextSenha"
        android:inputType="textPassword"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telaLoginEditTextLogin" />

    <Button
        android:id="@+id/telaLoginButtonEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button_cadastrar"
        android:text="@string/telaLoginButtonEntrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telaLoginEditTextSenha" />

    <ProgressBar
        android:id="@+id/telaLoginProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telaLoginButtonCadastrarUsuario" />

    <Button
        android:id="@+id/telaLoginButtonEsqueciASenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button_cadastrar"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/telaLoginButtonEsqueciASenha"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/telaLoginButtonCadastrarUsuario"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telaLoginButtonEntrar" />

    <Button
        android:id="@+id/telaLoginButtonCadastrarUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button_cadastrar"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/telaLoginButtonCadastrarUsuario"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/telaLoginButtonEsqueciASenha"
        app:layout_constraintTop_toBottomOf="@+id/telaLoginButtonEntrar" />

</androidx.constraintlayout.widget.ConstraintLayout>